fix: Shadow within table being clipped

--- a/assets/scss/layout/_table.scss
+++ b/assets/scss/layout/_table.scss
@@ -32,7 +32,6 @@ table {
   margin-right: 0;
   margin-bottom: my.$leading * 1.5em;
   margin-left: 0;
-  overflow: hidden;
 
   font-family: inherit;
   font-size: 100%;
